# aidoku-french-sources

./: .gitignore  README.md  flake.nix  index.json  index.min.json
.github/workflows/: build.yaml
sources/: fr.astralmanga-v2.aix  fr.astralmanga-v4.aix  fr.astralmanga-v5.aix  fr.frscan-v3.aix  fr.lecercleduscan-v4.aix  fr.legacyscans-v1.aix  fr.lelscanfr-v3.aix  fr.lelscanvf-v1.aix  fr.lelscanvf-v6.aix  fr.mangascan-v1.aix  fr.mangascantrad-v10.aix  fr.mangascantrad-v12.aix  fr.mangascantrad-v5.aix  fr.mangascantrad-v6.aix  fr.mangascantrad-v7.aix  fr.mangascantrad-v8.aix  fr.mangasorigines-v4.aix  fr.mangasorigines-v6.aix  fr.mangasorigines-v7.aix  fr.phenixscans-v3.aix  fr.phenixscans-v4.aix  fr.phenixscans-v5.aix  fr.reaperscans-v3.aix  fr.reaperscans-v5.aix  fr.sushiscan-v2.aix  fr.sushiscan-v3.aix  fr.sushiscan-v4.aix  fr.sushiscans-v3.aix  fr.sushiscans-v4.aix  fr.sushiscans-v5.aix
src/rust/fr.lecercleduscan/: Cargo.toml
src/rust/fr.lecercleduscan/res/: source.json
src/rust/fr.lecercleduscan/src/: helper.rs  lib.rs  parser.rs
src/rust/fr.legacyscans/: Cargo.toml
src/rust/fr.legacyscans/res/: filters.json  source.json
src/rust/fr.legacyscans/src/: lib.rs  parser.rs
src/rust/fr.lelscanfr/: Cargo.toml
src/rust/fr.lelscanfr/res/: filters.json  source.json
src/rust/fr.lelscanfr/src/: lib.rs  parser.rs
src/rust/fr.lelscanvf/: Cargo.toml
src/rust/fr.mangascantrad/: Cargo.toml
src/rust/fr.mangasorigines/: Cargo.toml
src/rust/fr.phenixscans/: Cargo.toml  generate_filters_file.js
src/rust/fr.reaperscans/: Cargo.toml
(+66 files in other folders)
