[package]
name = "lecercleduscan-aidoku"
version = "0.1.0"
authors = ["Moomooo95 <mohamed.ali.benzina.pro@gmail.com>"]
edition = "2021"
description = "Le Cercle du Scan source for aidoku"
repository = "https://github.com/Moomooo95/aidoku-french-sources/"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true

[dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs" }
